force-app/main/default/objects/Meter__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <description>Who pays this utility. FSD 5.10.4 gives exactly three values. This is the field the monthly review keys on when deciding whether a rise in charges is a landlord cost or a tenant recharge.</description>
    <inlineHelpText>Pick Shared when the meter serves more than one party, then record the split on the Meter Allocation related list. If you pick Management, explain why in Reason Management Pays.</inlineHelpText>
    <label>Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>