force-app/main/default/objects/Meter__c/fields/Property_Asset__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property this meter serves. FSD 5.10.4 requires the register to be maintained by property and space. Lookup rather than master detail so that a meter survives a property record being replaced, and so the object can keep its own Private OWD.</description>
    <inlineHelpText>The property this meter is installed at. Always set this, even when the meter serves the whole building rather than one suite.</inlineHelpText>
    <label>Property</label>
    <referenceTo>Property_Asset__c</referenceTo>
    <relationshipLabel>Meters</relationshipLabel>
    <relationshipName>Meters</relationshipName>
    <type>Lookup</type>
</CustomField>