force-app/main/default/objects/Meter__c/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <description>Current state of utility service at this meter. Values are exactly the four in FSD 5.10.4. Disconnected (Vacant) is distinct from Inactive because a disconnected vacant space still belongs to the register and still costs management a standing charge.</description>
    <inlineHelpText>Disconnected (Vacant) means service is off while the space is empty. Transferred means the account moved to a tenant. Inactive means the meter is no longer part of the register at all.</inlineHelpText>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Disconnected (Vacant)</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>