force-app/main/default/objects/Meter__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The unit or space this meter serves. FSD 5.10.4: leave blank where the meter serves the whole building. A blank value is therefore meaningful data, not missing data.</description>
    <inlineHelpText>Leave blank if this meter serves the whole building. Fill it in only when the meter serves one specific suite or space.</inlineHelpText>
    <label>Unit Space</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Meters</relationshipLabel>
    <relationshipName>Meters</relationshipName>
    <type>Lookup</type>
</CustomField>