force-app/main/default/objects/Meter__c/fields/Utility_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Number__c</fullName>
    <externalId>true</externalId>
    <description>The account number the utility provider bills under. FSD 5.10.4 calls this the match key to the payables invoice, so it is the field a monthly bill import joins on. Marked as an external id because it is a foreign key from the payables side.</description>
    <inlineHelpText>The account number that appears on the provider invoice, not the meter number. A master meter and its sub meters often share one account number, so duplicates here are expected and allowed.</inlineHelpText>
    <label>Utility Account Number</label>
    <length>80</length>
    <type>Text</type>
    <!--
      externalId is true but unique is false, deliberately. Several meters on one provider
      account is normal, so this cannot be an upsert key; the external id flag is here for
      the index and to mark the field as a foreign match key from the payables system.
    -->
</CustomField>