force-app/main/default/objects/Meter__c/fields/Utility_Type__c.field-meta.xml
<CustomField>
    <fullName>Utility_Type__c</fullName>
    <description>The utility this meter measures. Values are exactly the five FSD 5.10.4 names them, no more. Drives which charge components are expected on the bill and which unit the rate per unit is expressed in.</description>
    <inlineHelpText>Which utility this meter measures. Trash normally has no meter at all and belongs on a Vendor Contract instead; only pick Trash if a real trash meter exists.</inlineHelpText>
    <label>Utility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Sewer</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>