force-app/main/default/objects/Meter__c/listViews/Active_Meters.listView-meta.xml
<ListView>
    <fullName>Active_Meters</fullName>
    <columns>NAME</columns>
    <columns>Meter_Number__c</columns>
    <columns>Utility_Type__c</columns>
    <columns>Property_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>Paid_By__c</columns>
    <columns>Utility_Account_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Meters</label>
</ListView>