force-app/main/default/objects/Meter__c/listViews/All_Meters.listView-meta.xml
<ListView>
    <fullName>All_Meters</fullName>
    <columns>NAME</columns>
    <columns>Meter_Number__c</columns>
    <columns>Utility_Type__c</columns>
    <columns>Property_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>Paid_By__c</columns>
    <columns>Service_Status__c</columns>
    <columns>Provider_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Meters</label>
</ListView>