force-app/main/default/objects/Meter__c/listViews/Management_Paid_Meters.listView-meta.xml
<ListView>
    <fullName>Management_Paid_Meters</fullName>
    <columns>NAME</columns>
    <columns>Meter_Number__c</columns>
    <columns>Utility_Type__c</columns>
    <columns>Property_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>Paid_By_Reason__c</columns>
    <columns>Service_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid_By__c</field>
        <operation>equals</operation>
        <value>Management</value>
    </filters>
    <label>Management Paid Meters</label>
</ListView>