force-app/main/default/objects/Meter__c/listViews/Shared_Meters.listView-meta.xml
<ListView>
    <fullName>Shared_Meters</fullName>
    <columns>NAME</columns>
    <columns>Meter_Number__c</columns>
    <columns>Utility_Type__c</columns>
    <columns>Property_Asset__c</columns>
    <columns>Total_Allocated_Pct__c</columns>
    <columns>Service_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid_By__c</field>
        <operation>equals</operation>
        <value>Shared</value>
    </filters>
    <label>Shared Meters</label>
</ListView>